Anton kan ikke finde ud af github

--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,6 +12,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -88,7 +96,6 @@
     "    close_text = font.render(\"X\", True, white)\n",
     "    close_text_1 = close_text.get_rect(center=close_button.center)\n",
     "    root.blit(close_text, close_text_1)\n",
-    "\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
@@ -360,7 +367,6 @@
     "    fps = 60  # Set the desired frames per second\n",
     "\n",
     "    text = font_2.render(\"Choose a constant\", True, white)\n",
-    "    n=3\n",
     "    \n",
     "    numberkeys ={\n",
     "            pygame.K_1: \"1\",\n",
@@ -395,17 +401,30 @@
     "    spacing = width // 40\n",
     "    start_x = (width - (8 * box_width + 7 * spacing)) // 2  # center the boxes\n",
     "    y = 3 * height // 4\n",
+    "\n",
+    "    character_image = pygame.transform.scale(pygame.image.load('Constant_runner.png'),(box_width//2, box_height*3//2))\n",
+    "    character_x = start_x + 2 * (box_width + spacing)\n",
+    "    character_y = y - box_height*3//2\n",
+    "\n",
+    "    score_text_box = pygame.Rect(width-width/12, 50, width/12, width/15)\n",
     "    \n",
     "    for i in range(8):\n",
     "        x = start_x + i * (box_width + spacing)\n",
     "        rect = pygame.Rect(x, y, box_width, box_height)\n",
     "        number_rects.append((rect, \"\"))\n",
-    "    \n",
+    "\n",
+    "    max_locked_out = width//7\n",
+    "    n = 3\n",
+    "\n",
     "    constant_running = False\n",
     "    locked_out = False\n",
+    "    locked_out_time = max_locked_out\n",
     "\n",
     "    while True:\n",
     "        math_game_dos.fill(white)\n",
+    "        \n",
+    "        character = pygame.Rect(character_x, character_y, box_width//2, box_height*3//2)\n",
+    "\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "        dropdown_dynamics(math_game_dos, dropdown, home_button, close_button)\n",
     "        \n",
@@ -414,7 +433,6 @@
     "            text_start = font_2.render(\"Choose a constant to start game\", True, black)\n",
     "            text_start_2 = text_start.get_rect(center=Game_text_box.center)\n",
     "            math_game_dos.blit(text_start, text_start_2)\n",
-    "\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -447,28 +465,23 @@
     "                        for j in range(len(rects)):\n",
     "                            if j!= i:\n",
     "                                rects[j]= (rects[j][0],blue)\n",
+    "                        character_x = start_x + 2 * (box_width + spacing)\n",
+    "                        character_y = y - box_height*3//2\n",
     "                        constant_running = True\n",
+    "                        locked_out = False\n",
     "            \n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if event.key in numberkeys and constant_running:\n",
     "                    if numberkeys[event.key] == number[n-1] and not locked_out:\n",
-    "                        for i in range(len(number_rects) - 1):\n",
-    "                            number_rect = number_rects[i][0]\n",
-    "                            next_text = number_rects[i + 1][1]\n",
-    "                            number_rects[i] = (number_rect, next_text)\n",
+    "                        if len(number_rects) < 8:\n",
+    "                            new_rect = pygame.Rect(number_rects[-1][0].x + box_width + spacing, y, box_width, box_height)\n",
+    "                            number_rects.append((new_rect, number[n-1]))\n",
+    "                        else:\n",
+    "                            for i in range(len(number_rects)):\n",
+    "                                number_rects[i][0].x = start_x + (i-1) * (box_width + spacing)\n",
     "                            \n",
-    "                            if len(number_rects) < 8:\n",
-    "                                for k in range(len(number_rects)):\n",
-    "                                    number_rects[k][0].x += box_width\n",
-    "                                new_rect = pygame.Rect(number_rects[0][0].x - box_width - spacing, y, box_width, box_height)\n",
-    "                                number_rects.insert(0,(new_rect, \"\"))\n",
-    "\n",
-    "                        # Update the last one with the new digit\n",
-    "                        last_index = len(number_rects) - 1\n",
-    "                        number_rect = number_rects[last_index][0]\n",
-    "                        number_text = number[n-1]\n",
-    "                        number_rects[last_index] = (number_rect, number_text)\n",
-    "\n",
+    "                            new_rect = pygame.Rect(start_x + (len(number_rects)-1) * (box_width + spacing), y, box_width, box_height)\n",
+    "                            number_rects.append((new_rect, number[n-1]))\n",
     "                        n += 1\n",
     "                    else:\n",
     "                        locked_out = True\n",
@@ -483,9 +496,6 @@
     "                number_rect.x -= 5\n",
     "                if number_rect.x < -box_width:\n",
     "                    number_rects.pop(i)\n",
-    "                \n",
-    "                if len(number_rects) == 0:\n",
-    "                    constant_running = False\n",
     "\n",
     "        \n",
     "        for i in range(len(rects)):\n",
@@ -496,7 +506,36 @@
     "            text_surface = font.render(label, True, (white))\n",
     "            text_rect = text_surface.get_rect(center=rect.center)\n",
     "            math_game_dos.blit(text_surface, text_rect) \n",
+    "\n",
+    "            math_game_dos.blit(character_image, (character.x, character.y))\n",
+    "\n",
+    "        if locked_out:\n",
+    "            \n",
+    "            locked_out_box = pygame.Rect(3*width//7, height//5, width//7, height//20)\n",
+    "            pygame.draw.rect(math_game_dos, black, locked_out_box)\n",
+    "\n",
+    "            if locked_out_time >= 0:\n",
+    "                locked_out_time -= 4\n",
+    "                locked_out_bar = pygame.Rect(3*width//7 + 2, height//5 + 2, locked_out_time - 4, height//20 - 4)\n",
+    "                pygame.draw.rect(math_game_dos, red, locked_out_bar)\n",
+    "            else:\n",
+    "                locked_out = False\n",
+    "                locked_out_time = max_locked_out\n",
     "        \n",
+    "        if character.x > number_rects[-1][0].x + box_width:\n",
+    "            character_y += 7\n",
+    "            constant_running = False\n",
+    "            for i in range(5):\n",
+    "                next_num_rect = pygame.Rect(number_rects[-1][0].x + (i+1) * (box_width + spacing), y ,box_width, box_height)\n",
+    "                pygame.draw.rect(math_game_dos, gray, next_num_rect)\n",
+    "                next_number = font_2.render(str(number[n-1+i]), True, black)\n",
+    "                next_number_text = next_number.get_rect(center=next_num_rect.center)\n",
+    "                screen.blit(next_number, next_number_text)\n",
+    "\n",
+    "        score = font_2.render(f\"Digits: {n-3}\", True, black)\n",
+    "        score_text = score.get_rect(left=score_text_box.left, centery=score_text_box.centery)\n",
+    "        screen.blit(score, score_text)\n",
+    "\n",
     "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
     "        \n",
