Fiks spil funny

--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12,14 +12,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -195,35 +187,45 @@
     "\n",
     "    life_slots = 3\n",
     "\n",
+    "    # Define results box\n",
+    "    results_box = pygame.Rect(width-640, height-400, 120, 32)\n",
+    "\n",
+    "    # Define Game Over box\n",
+    "    game_over_box = pygame.Rect(width-800, height/2, 120, 32)\n",
+    "    game_over = False\n",
+    "    # Define restart button\n",
+    "    restart_button = pygame.Rect(width-800, height/2 + 50, 120, 32)\n",
+    "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "\n",
-    "        # Draw square outline of the graph around the middle of the window\n",
-    "        window_width, window_height = math_game_uno.get_size()\n",
-    "        graph_size = min(window_width, window_height) // 2\n",
-    "        graph_x = (window_width - graph_size) // 2 - 300\n",
-    "        graph_y = (window_height - graph_size) // 2\n",
-    "        pygame.draw.rect(math_game_uno, 'gray64', (graph_x, graph_y, graph_size, graph_size), 2)\n",
-    "        pygame.draw.line(math_game_uno, 'gray64', (graph_x, graph_y + graph_size // 2), (graph_x + graph_size, graph_y + graph_size // 2), 2)\n",
-    "        pygame.draw.line(math_game_uno, 'gray64', (graph_x + graph_size // 2, graph_y), (graph_x + graph_size // 2, graph_y + graph_size), 2)\n",
-    "        \n",
+    "        if not game_over:\n",
+    "            # Draw square outline of the graph around the middle of the window\n",
+    "            window_width, window_height = math_game_uno.get_size()\n",
+    "            graph_size = min(window_width, window_height) // 2\n",
+    "            graph_x = (window_width - graph_size) // 2 - 300\n",
+    "            graph_y = (window_height - graph_size) // 2\n",
+    "            pygame.draw.rect(math_game_uno, 'gray64', (graph_x, graph_y, graph_size, graph_size), 2)\n",
+    "            pygame.draw.line(math_game_uno, 'gray64', (graph_x, graph_y + graph_size // 2), (graph_x + graph_size, graph_y + graph_size // 2), 2)\n",
+    "            pygame.draw.line(math_game_uno, 'gray64', (graph_x + graph_size // 2, graph_y), (graph_x + graph_size // 2, graph_y + graph_size), 2)\n",
+    "            \n",
     "\n",
-    "        # Plot newly generated points\n",
-    "        plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
+    "            # Plot newly generated points\n",
+    "            plot_points_with_pygame(x, y, math_game_uno, graph_x, graph_y, graph_size)\n",
     "\n",
-    "        # Draw the points box\n",
-    "        pygame.draw.rect(math_game_uno, white, points_box)\n",
-    "        points_text = font.render(\"Points: \"+ str(current_points), True, black)\n",
-    "        points_text_rect = points_text.get_rect(center=points_box.center)\n",
-    "        math_game_uno.blit(points_text, points_text_rect)\n",
+    "            # Draw the points box\n",
+    "            pygame.draw.rect(math_game_uno, white, points_box)\n",
+    "            points_text = font.render(\"Points: \"+ str(current_points), True, black)\n",
+    "            points_text_rect = points_text.get_rect(center=points_box.center)\n",
+    "            math_game_uno.blit(points_text, points_text_rect)\n",
     "\n",
-    "        # Draw life slots\n",
-    "        slot_width = 50\n",
-    "        slot_height = 20\n",
-    "        for i in range(3):\n",
-    "            color_box = red if i < life_slots else black\n",
-    "            pygame.draw.rect(math_game_uno, color_box, (width-1350 + i * slot_width + slot_width // 2, height-770, slot_width - 10, slot_height))\n",
+    "            # Draw life slots\n",
+    "            slot_width = 50\n",
+    "            slot_height = 20\n",
+    "            for i in range(3):\n",
+    "                color_box = red if i < life_slots else black\n",
+    "                pygame.draw.rect(math_game_uno, color_box, (width-1350 + i * slot_width + slot_width // 2, height-770, slot_width - 10, slot_height))\n",
     "\n",
     "        if guessing:\n",
     "            # Draw input box\n",
@@ -237,6 +239,20 @@
     "            guess_text = font.render(\"Guess\", True, white)\n",
     "            guess_text_rect = guess_text.get_rect(center=guess_button.center)\n",
     "            math_game_uno.blit(guess_text, guess_text_rect)\n",
+    "\n",
+    "        elif game_over:\n",
+    "            # Draw game over box\n",
+    "            pygame.draw.rect(math_game_uno, white, game_over_box)\n",
+    "            game_over_text = font.render(\"Game Over\", True, black)\n",
+    "            game_over_text_rect = game_over_text.get_rect(center=game_over_box.center)\n",
+    "            math_game_uno.blit(game_over_text, game_over_text_rect)\n",
+    "\n",
+    "            # Draw restart button\n",
+    "            pygame.draw.rect(math_game_uno, blue, restart_button)\n",
+    "            restart_text = font.render(\"Restart?\", True, white)\n",
+    "            restart_text_rect = restart_text.get_rect(center=restart_button.center)\n",
+    "            math_game_uno.blit(restart_text, restart_text_rect)\n",
+    "\n",
     "        else:\n",
     "            # Draw next button\n",
     "            pygame.draw.rect(math_game_uno, blue, next_button)\n",
@@ -261,6 +277,17 @@
     "            difference_text = font.render(\"Difference: \"+ str(abs(R - float(text)))[:4], True, black)\n",
     "            difference_text_rect = difference_text.get_rect(center=difference_box.center)\n",
     "            math_game_uno.blit(difference_text, difference_text_rect)\n",
+    "\n",
+    "            # Draw result box\n",
+    "            pygame.draw.rect(math_game_uno, white, results_box)\n",
+    "            if abs(R - float(text)) <= 0.05:\n",
+    "                result_text = font.render(\"Correct! Points +5, Life +1\" , True, black)\n",
+    "            elif abs(R - float(text)) < 0.1:\n",
+    "                result_text = font.render(\"Close! Points +1\", True, black)\n",
+    "            else:\n",
+    "                result_text = font.render(\"Wrong! Life -1\", True, black)\n",
+    "            result_text_rect = result_text.get_rect(center=results_box.center)\n",
+    "            math_game_uno.blit(result_text, result_text_rect)\n",
     "\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
     "\n",
@@ -290,6 +317,8 @@
     "                                current_points += 1\n",
     "                            else:\n",
     "                                life_slots -= 1\n",
+    "                                if life_slots == 0:\n",
+    "                                    game_over = True\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
@@ -306,7 +335,12 @@
     "                        if float(text) <= 1:\n",
     "                            active = False\n",
     "                            guessing = False\n",
-    "                            if abs(R - float(text)) < 0.1:\n",
+    "                            if abs(R - float(text)) <= 0.05:\n",
+    "                                current_points += 5\n",
+    "                                if life_slots < 3:\n",
+    "                                    life_slots += 1\n",
+    "                                    \n",
+    "                            elif abs(R - float(text)) < 0.1:\n",
     "                                current_points += 1\n",
     "                            else:\n",
     "                                life_slots -= 1\n",
@@ -330,6 +364,20 @@
     "                    guessing = True\n",
     "                    text = '0.'\n",
     "                    active = False\n",
+    "            \n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and game_over:\n",
+    "                if restart_button.collidepoint(event.pos):\n",
+    "                    R = random.randint(0, 100)/100\n",
+    "                    x, y = generate_points_with_correlation(R)\n",
+    "\n",
+    "                    guessing = True\n",
+    "                    game_over = False\n",
+    "                    active = False\n",
+    "\n",
+    "                    life_slots = 3\n",
+    "                    current_points = 0\n",
+    "                    text = '0.'\n",
+    "                    \n",
     "\n",
     "        pygame.display.flip()\n",
     "        # Cap the frame rate to 60 fps\n",
@@ -342,22 +390,22 @@
     "    y_scaled = height - (y - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
     "    \n",
     "    # Calculate the regression line\n",
-    "    slope, intercept, r_value, p_value, std_err = linregress(x, y)\n",
-    "    x_min, x_max = x.min(), x.max()\n",
-    "    y_min = slope * x_min + intercept\n",
-    "    y_max = slope * x_max + intercept\n",
+    "    # slope, intercept, r_value, p_value, std_err = linregress(x, y)\n",
+    "    # x_min, x_max = x.min(), x.max()\n",
+    "    # y_min = slope * x_min + intercept\n",
+    "    # y_max = slope * x_max + intercept\n",
     "    \n",
-    "    x_min_scaled = (x_min - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
-    "    x_max_scaled = (x_max - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
-    "    y_min_scaled = height - (y_min - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
-    "    y_max_scaled = height - (y_max - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
+    "    # x_min_scaled = (x_min - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
+    "    #x_max_scaled = (x_max - x.min()) / (x.max() - x.min()) * graph_size + graph_x\n",
+    "    # y_min_scaled = height - (y_min - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
+    "    # y_max_scaled = height - (y_max - y.min()) / (y.max() - y.min()) * graph_size - graph_y\n",
     "       \n",
     "    # Draw the points\n",
     "    for i in range(len(x_scaled)):\n",
     "        pygame.draw.circle(screen, black, (int(x_scaled[i]), int(y_scaled[i])), 3)\n",
     "        \n",
     "    # Draw the regression line\n",
-    "    pygame.draw.line(screen, red, (int(x_min_scaled), int(y_min_scaled)), (int(x_max_scaled), int(y_max_scaled)), 2)\n",
+    "    # pygame.draw.line(screen, red, (int(x_min_scaled), int(y_min_scaled)), (int(x_max_scaled), int(y_max_scaled)), 2)\n",
     "\n",
     "def Math_Game_Dos():\n",
     "    global running\n",
