--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -26,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "c:\\Users\\anton\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -68,14 +60,21 @@
     "button_eng = pygame.Rect(5*int(width/7), 150, button_width, button_height)\n",
     "\n",
     "\n",
-    "dropdown = pygame.Rect(-10,-20, width/4, height/20) \n",
+    "dropdown = pygame.Rect(-10,-20, width/4, height/20)\n",
+    "information = pygame.Rect(width-20, 10,10,10) \n",
     "home_button = pygame.Rect(50,-30,30,30)\n",
     "close_button = pygame.Rect(10,-30,30,30)\n",
+    "\n",
+    "information = pygame.Rect(width-20, 10,10,10) \n",
+    "information_box = pygame.Rect(width//3,height//3,width//3, height//3)\n",
+    "close_information = pygame.Rect(width//3-15, height//3-15, 10, 10)\n",
     "\n",
     "# Create a clock object to control the frame rate\n",
     "clock = pygame.time.Clock()\n",
     "fps = 60  # Set the desired frames per second\n",
     "running = True\n",
+    "info_clicked = False\n",
+    "\n",
     "\n",
     "def dropdown_dynamics(root, dropdown, home_button, close_button):\n",
     "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
@@ -104,6 +103,31 @@
     "    close_text = font.render(\"X\", True, white)\n",
     "    close_text_1 = close_text.get_rect(center=close_button.center)\n",
     "    root.blit(close_text, close_text_1)\n",
+    "\n",
+    "def information_button(root):\n",
+    "    global info_clicked\n",
+    "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
+    "\n",
+    "    hover_info = information.collidepoint(mouse_x, mouse_y)\n",
+    "    hover_close = close_information.collidepoint(mouse_x, mouse_y)\n",
+    "    if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "        if hover_info:\n",
+    "            info_clicked = True\n",
+    "        if hover_close:\n",
+    "            info_clicked = False\n",
+    "    \n",
+    "    if root == math_game_uno:\n",
+    "        information_text = font.render(\"The game is guess the correlation\", True, white)\n",
+    "    if root == math_game_dos:\n",
+    "        information_text = font.render(\"The game is constant runner\", True, white)        \n",
+    "    info_print = information_text.get_rect(center=information_box.center)\n",
+    "\n",
+    "    if info_clicked:\n",
+    "        pygame.draw.rect(root, black, information_box, 0, 15)\n",
+    "        pygame.draw.rect(root, black, close_information, 0, 15)\n",
+    "        root.blit(information_text, info_print)\n",
+    "    else:\n",
+    "        pygame.draw.rect(root,black, information, 0, 15)\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
@@ -158,7 +182,7 @@
     "    return x, y\n",
     "\n",
     "def Math_Game_Uno():\n",
-    "    global running\n",
+    "    global running, math_game_uno\n",
     "    math_game_uno = pygame.display.set_mode((width, height))\n",
     "    pygame.display.set_caption('Math uno')\n",
     "    clock = pygame.time.Clock()\n",
@@ -424,7 +448,7 @@
     "    # pygame.draw.line(screen, red, (int(x_min_scaled), int(y_min_scaled)), (int(x_max_scaled), int(y_max_scaled)), 2)\n",
     "\n",
     "def Math_Game_Dos():\n",
-    "    global running\n",
+    "    global running, math_game_dos\n",
     "    math_game_dos = pygame.display.set_mode((width, height))\n",
     "    pygame.display.set_caption('Constant Runner')\n",
     "    clock = pygame.time.Clock()\n",
@@ -497,6 +521,9 @@
     "            text_start = font_2.render(\"Choose a constant to start game\", True, black)\n",
     "            text_start_2 = text_start.get_rect(center=Game_text_box.center)\n",
     "            math_game_dos.blit(text_start, text_start_2)\n",
+    "        \n",
+    "        if not constant_running:\n",
+    "            information_button(math_game_dos)\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -703,7 +730,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -717,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
