--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,12 @@
     "                        if float(text) <= 1:\n",
     "                            active = False\n",
     "                            guessing = False\n",
-    "                            if abs(R - float(text)) < 0.1:\n",
+    "                            if abs(R - float(text)) <= 0.05:\n",
+    "                                current_points += 5\n",
+    "                                if life_slots < 3:\n",
+    "                                    life_slots += 1\n",
+    "                                    \n",
+    "                            elif abs(R - float(text)) < 0.1:\n",
     "                                current_points += 1\n",
     "                            else:\n",
     "                                life_slots -= 1\n",
