--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -44,10 +44,10 @@
     "font_2 = pygame.font.Font(None,25)\n",
     "\n",
     "#Buttons\n",
-    "button_width, button_height = int(width/7), 50\n",
+    "button_width, button_height = width//2, height//20\n",
     "\n",
     "button_color = black\n",
-    "button_math = pygame.Rect(int(width/7), 150, button_width, button_height)\n",
+    "button_math = pygame.Rect((width-button_width)//2, 3*button_height, button_width, button_height)\n",
     "\n",
     "dropdown = pygame.Rect(-10,-20, width/4, height/20)\n",
     "information = pygame.Rect(width-20, 10,10,10) \n",
@@ -117,13 +117,15 @@
     "    else:\n",
     "        pygame.draw.rect(root,black, information, 0, 15)\n",
     "\n",
-    "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
+    "def button_dynamics(button, name, subname_1, subname_2):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
     "\n",
-    "        if hover and button.height < 350:\n",
-    "            button.height += 10\n",
-    "        elif not hover and button.height > 50:\n",
-    "            button.height -= 15\n",
+    "        if hover and button.height < 10*button_height:\n",
+    "            button.height += button_height/5\n",
+    "        elif not hover and button.height > button_height:\n",
+    "            button.height -= 2*button_height/5\n",
+    "        elif not hover:\n",
+    "            button.height = button_height\n",
     "        \n",
     "        button = pygame.Rect(button.x, button.y, button.width, button.height)\n",
     "        pygame.draw.rect(screen, black, button,0, 30)\n",
@@ -132,30 +134,21 @@
     "        text_button = text.get_rect(center=(button.centerx, button.y+25))\n",
     "        screen.blit(text, text_button)\n",
     "\n",
-    "        subbutton_1 = subbutton_2 = subbutton_3 = None\n",
+    "        subbutton_1 = subbutton_2 = None\n",
     "\n",
-    "        if button.height > 110:\n",
-    "            subbutton_1 = pygame.Rect(button.x+10,button.y+60,button_width-20, button_height)\n",
+    "        if button.height > 9*button_height:\n",
+    "            subbutton_1 = pygame.Rect(button.x + button_width//9, button.y + 2*button_height, 3*button_width//9, 6*button_height)\n",
     "            pygame.draw.rect(screen, white, subbutton_1,0, 30)\n",
+    "            subbutton_2 = pygame.Rect(button.x + 5*button_width//9, button.y + 2*button_height,3*button_width//9, 6*button_height)\n",
+    "            pygame.draw.rect(screen, white, subbutton_2,0, 30)\n",
     "            text_1 = font_2.render(subname_1, True, black)\n",
     "            text_subbutton_1 = text_1.get_rect(center=subbutton_1.center)\n",
     "            screen.blit(text_1, text_subbutton_1)\n",
-    "\n",
-    "        if button.height > 210:\n",
-    "            subbutton_2 = pygame.Rect(button.x+10,button.y+160,button_width-20, button_height)\n",
-    "            pygame.draw.rect(screen, white, subbutton_2,0, 30)\n",
     "            text_2 = font_2.render(subname_2, True, black)\n",
     "            text_subbutton_2 = text_2.get_rect(center=subbutton_2.center)\n",
     "            screen.blit(text_2, text_subbutton_2)\n",
-    "\n",
-    "        if button.height > 310:\n",
-    "            subbutton_3 = pygame.Rect(button.x+10,button.y+260,button_width-20, button_height)\n",
-    "            pygame.draw.rect(screen, white, subbutton_3,0, 30)\n",
-    "            text_3 = font_2.render(subname_3, True, black)\n",
-    "            text_subbutton_3 = text_3.get_rect(center=subbutton_3.center)\n",
-    "            screen.blit(text_3, text_subbutton_3)\n",
     "        \n",
-    "        return subbutton_1, subbutton_2, subbutton_3\n",
+    "        return subbutton_1, subbutton_2\n",
     "\n",
     "def generate_points_with_correlation(R, n_points=100):\n",
     "    # Generate random x values\n",
@@ -632,7 +625,7 @@
     "\n",
     "    dropdown_dynamics(screen, dropdown, home_button, close_button)\n",
     "\n",
-    "    subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math', 'Game 1', 'Game 2', 'Game 3')\n",
+    "    subbutton_math_1, subbutton_math_2 = button_dynamics(button_math, 'Math', 'Game 1', 'Game 2')\n",
     "    \n",
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
