--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.4)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     },
@@ -19,7 +19,7 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[31mSystemExit\u001b[39m\n"
+      "\u001b[1;31mSystemExit\u001b[0m\n"
      ]
     },
     {
@@ -666,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -680,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
