--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,31 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[31mSystemExit\u001b[39m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3557: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -698,6 +690,100 @@
     "# Quit Pygame\n",
     "pygame.quit()\n",
     "sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scipy\n",
+      "  Downloading scipy-1.15.2-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.8 kB ? eta -:--:--\n",
+      "     ------ --------------------------------- 10.2/60.8 kB ? eta -:--:--\n",
+      "     ------------------- ------------------ 30.7/60.8 kB 330.3 kB/s eta 0:00:01\n",
+      "     -------------------------------- ----- 51.2/60.8 kB 375.8 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.8/60.8 kB 360.9 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy<2.5,>=1.23.5 in c:\\users\\kjaer\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scipy) (2.2.4)\n",
+      "Downloading scipy-1.15.2-cp311-cp311-win_amd64.whl (41.2 MB)\n",
+      "   ---------------------------------------- 0.0/41.2 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.1/41.2 MB 2.0 MB/s eta 0:00:21\n",
+      "   ---------------------------------------- 0.4/41.2 MB 5.3 MB/s eta 0:00:08\n",
+      "   - -------------------------------------- 1.2/41.2 MB 9.3 MB/s eta 0:00:05\n",
+      "   - -------------------------------------- 2.0/41.2 MB 11.5 MB/s eta 0:00:04\n",
+      "   -- ------------------------------------- 2.8/41.2 MB 13.0 MB/s eta 0:00:03\n",
+      "   --- ------------------------------------ 3.7/41.2 MB 13.8 MB/s eta 0:00:03\n",
+      "   ---- ----------------------------------- 4.5/41.2 MB 14.5 MB/s eta 0:00:03\n",
+      "   ----- ---------------------------------- 5.3/41.2 MB 14.7 MB/s eta 0:00:03\n",
+      "   ----- ---------------------------------- 6.1/41.2 MB 15.0 MB/s eta 0:00:03\n",
+      "   ------ --------------------------------- 6.8/41.2 MB 15.0 MB/s eta 0:00:03\n",
+      "   ------- -------------------------------- 7.7/41.2 MB 15.3 MB/s eta 0:00:03\n",
+      "   -------- ------------------------------- 8.5/41.2 MB 15.6 MB/s eta 0:00:03\n",
+      "   --------- ------------------------------ 9.4/41.2 MB 15.8 MB/s eta 0:00:03\n",
+      "   --------- ------------------------------ 10.3/41.2 MB 16.0 MB/s eta 0:00:02\n",
+      "   ---------- ----------------------------- 11.1/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ----------- ---------------------------- 11.9/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ------------ --------------------------- 12.7/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 13.6/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   -------------- ------------------------- 14.4/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   -------------- ------------------------- 15.3/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   --------------- ------------------------ 16.1/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ---------------- ----------------------- 16.8/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 17.6/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 18.4/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 19.2/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 20.1/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 20.9/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 21.7/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 22.6/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 23.5/41.2 MB 17.7 MB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 24.3/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 25.1/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 25.6/41.2 MB 17.3 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 25.6/41.2 MB 17.3 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 26.4/41.2 MB 15.6 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 27.3/41.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 28.1/41.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 29.0/41.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 29.8/41.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 30.6/41.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 31.5/41.2 MB 16.0 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 32.4/41.2 MB 16.4 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 33.2/41.2 MB 16.4 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 34.0/41.2 MB 16.4 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 34.8/41.2 MB 16.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 35.7/41.2 MB 16.4 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 36.4/41.2 MB 18.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 37.2/41.2 MB 18.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 38.1/41.2 MB 18.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 38.9/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 39.7/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  40.6/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  41.2/41.2 MB 17.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 41.2/41.2 MB 14.9 MB/s eta 0:00:00\n",
+      "Installing collected packages: scipy\n",
+      "Successfully installed scipy-1.15.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
+      "[notice] To update, run: C:\\Users\\kjaer\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scipy"
    ]
   }
  ],
