--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,6 +378,8 @@
     "                                current_points += 1\n",
     "                            else:\n",
     "                                life_slots -= 1\n",
+    "                                if life_slots == 0:\n",
+    "                                    game_over = True\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
@@ -752,7 +754,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -766,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
