--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -58,13 +66,12 @@
     "button_math = pygame.Rect((width-button_width)//2, 3*button_height, button_width, button_height)\n",
     "\n",
     "dropdown = pygame.Rect(-10,-20, width/4, height/20)\n",
-    "information = pygame.Rect(width-20, 10,10,10) \n",
     "home_button = pygame.Rect(50,-30,30,30)\n",
     "close_button = pygame.Rect(10,-30,30,30)\n",
     "\n",
-    "information = pygame.Rect(width-20, 10,10,10) \n",
+    "information_button = pygame.Rect(width-20, 10,10,10) \n",
     "information_box = pygame.Rect(width//3,height//3,width//3, height//3)\n",
-    "close_information = pygame.Rect(width//3-15, height//3-15, 10, 10)\n",
+    "information_close_button = pygame.Rect(width//3-15, height//3-15, 10, 10)\n",
     "\n",
     "# Create a clock object to control the frame rate\n",
     "clock = pygame.time.Clock()\n",
@@ -100,32 +107,29 @@
     "    close_text_1 = close_text.get_rect(center=close_button.center)\n",
     "    root.blit(close_text, close_text_1)\n",
     "\n",
-    "def information_button(root):\n",
+    "def information_dynamics(root, information_button, information_close_button):\n",
     "    global info_clicked\n",
     "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "\n",
-    "    hover_info = information.collidepoint(mouse_x, mouse_y)\n",
-    "    hover_close = close_information.collidepoint(mouse_x, mouse_y)\n",
-    "    if event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "        if hover_info:\n",
-    "            info_clicked = True\n",
-    "        if hover_close:\n",
-    "            info_clicked = False\n",
-    "    \n",
-    "    if root == math_game_uno:\n",
-    "        information_text = font.render(\"The game is guess the correlation\", True, white)\n",
-    "    if root == math_game_dos:\n",
-    "        information_text = font.render(\"The game is constant runner\", True, white)        \n",
-    "    info_print = information_text.get_rect(center=information_box.center)\n",
+    "    if information_button.collidepoint(mouse_x, mouse_y):\n",
+    "        pygame.draw.rect(root, black, information_button,0, 15)\n",
+    "        text = font.render(\"i\", True, white)\n",
+    "        text_1 = text.get_rect(center=information_button.center)\n",
+    "        root.blit(text, text_1)\n",
     "\n",
-    "    if info_clicked:\n",
-    "        pygame.draw.rect(root, black, information_box, 0, 15)\n",
-    "        pygame.draw.rect(root, black, close_information, 0, 15)\n",
-    "        root.blit(information_text, info_print)\n",
-    "    else:\n",
-    "        pygame.draw.rect(root,black, information, 0, 15)\n",
+    "        if info_clicked:\n",
+    "            pygame.draw.rect(root, gray, information_box,0, 20)\n",
+    "            text_2 = font_2.render(\"This is a math game where you can guess the correlation coefficient of a set of points.\", True, black)\n",
+    "            text_3 = text_2.get_rect(center=information_box.center)\n",
+    "            root.blit(text_2, text_3)\n",
+    "\n",
+    "            pygame.draw.rect(root, black, information_close_button,0, 15)\n",
+    "            close_text = font.render(\"X\", True, white)\n",
+    "            close_text_1 = close_text.get_rect(center=information_close_button.center)\n",
+    "            root.blit(close_text, close_text_1)\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2):\n",
+    "    \n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
     "\n",
     "        if hover and button.height < 10*button_height:\n",
@@ -319,6 +323,7 @@
     "            math_game_uno.blit(result_text, result_text_rect)\n",
     "\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
+    "        information_dynamics(math_game_uno, information_button, information_close_button)\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -329,7 +334,11 @@
     "                return\n",
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
-    "            \n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and information_button.collidepoint(mouse_x, mouse_y):\n",
+    "                info_clicked = not info_clicked\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and information_close_button.collidepoint(mouse_x, mouse_y):\n",
+    "                info_clicked = not info_clicked\n",
+    "\n",
     "            # Primary code for the input box\n",
     "            if event.type == pygame.MOUSEBUTTONDOWN and guessing:\n",
     "                if input_box.collidepoint(event.pos):\n",
@@ -519,7 +528,7 @@
     "            math_game_dos.blit(text_start, text_start_2)\n",
     "        \n",
     "        if not constant_running:\n",
-    "            information_button(math_game_dos)\n",
+    "            information_dynamics(math_game_dos, information_button, information_close_button)\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -530,6 +539,10 @@
     "                return\n",
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and information_button.collidepoint(mouse_x, mouse_y):\n",
+    "                info_clicked = not info_clicked\n",
+    "            if event.type == pygame.MOUSEBUTTONDOWN and information_close_button.collidepoint(mouse_x, mouse_y):\n",
+    "                info_clicked = not info_clicked\n",
     "\n",
     "            # From here you can fuck around ~~~~~~~~~~~\n",
     "            if event.type == pygame.MOUSEBUTTONDOWN:\n",
