Er det ligegyldigt hvad jeg skriver?

--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.4)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -20,14 +12,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\anton\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -73,6 +57,14 @@
     "information = pygame.Rect(width-20, 10,10,10) \n",
     "information_box = pygame.Rect(width//3,height//3,width//3, height//3)\n",
     "close_information = pygame.Rect(width//3-15, height//3-15, 10, 10)\n",
+    "\n",
+    "Correlation_logo = pygame.transform.scale(pygame.image.load(\"CorrelationGuessr.png\"),(3*button_width//9, 6*button_height))\n",
+    "Constant_logo = pygame.transform.scale(pygame.image.load(\"ConstantGame.png\"),(3*button_width//9, 6*button_height))\n",
+    "\n",
+    "correct_guess_sound = pygame.mixer.Sound(\"Correct.mp3\")\n",
+    "phenominal_guess_sound = pygame.mixer.Sound(\"Correct.mp3\") # Ændre lydfil\n",
+    "wrong_guess_sound = pygame.mixer.Sound(\"Correct.mp3\") # Ændre lydfil\n",
+    "game_over_sound = pygame.mixer.Sound(\"Correct.mp3\") # Ændre lydfil\n",
     "\n",
     "# Create a clock object to control the frame rate\n",
     "clock = pygame.time.Clock()\n",
@@ -133,7 +125,7 @@
     "    else:\n",
     "        pygame.draw.rect(root,black, information, 0, 15)\n",
     "\n",
-    "def button_dynamics(button, name, subname_1, subname_2):\n",
+    "def button_dynamics(button, name):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
     "\n",
     "        if hover and button.height < 10*button_height:\n",
@@ -154,16 +146,12 @@
     "\n",
     "        if button.height > 9*button_height:\n",
     "            subbutton_1 = pygame.Rect(button.x + button_width//9, button.y + 2*button_height, 3*button_width//9, 6*button_height)\n",
-    "            pygame.draw.rect(screen, white, subbutton_1,0, 30)\n",
+    "            game_1 = pygame.draw.rect(screen, white, subbutton_1,0, 25)\n",
     "            subbutton_2 = pygame.Rect(button.x + 5*button_width//9, button.y + 2*button_height,3*button_width//9, 6*button_height)\n",
-    "            pygame.draw.rect(screen, white, subbutton_2,0, 30)\n",
-    "            text_1 = font_2.render(subname_1, True, black)\n",
-    "            text_subbutton_1 = text_1.get_rect(center=subbutton_1.center)\n",
-    "            screen.blit(text_1, text_subbutton_1)\n",
-    "            text_2 = font_2.render(subname_2, True, black)\n",
-    "            text_subbutton_2 = text_2.get_rect(center=subbutton_2.center)\n",
-    "            screen.blit(text_2, text_subbutton_2)\n",
-    "        \n",
+    "            game_2 = pygame.draw.rect(screen, white, subbutton_2,0, 25)\n",
+    "            screen.blit(Correlation_logo, game_1)\n",
+    "            screen.blit(Constant_logo, game_2)\n",
+    "\n",
     "        return subbutton_1, subbutton_2\n",
     "\n",
     "def generate_points_with_correlation(R, n_points=100):\n",
@@ -354,13 +342,17 @@
     "                                current_points += 5\n",
     "                                if life_slots < 3:\n",
     "                                    life_slots += 1\n",
+    "                                    phenominal_guess_sound.play()\n",
     "                                    \n",
     "                            elif abs(R - float(text)) < 0.1:\n",
     "                                current_points += 1\n",
+    "                                correct_guess_sound.play()\n",
     "                            else:\n",
     "                                life_slots -= 1\n",
+    "                                wrong_guess_sound.play()\n",
     "                                if life_slots == 0:\n",
     "                                    game_over = True\n",
+    "                                    game_over_sound.play()\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
@@ -492,9 +484,9 @@
     "    start_x = (width - (8 * box_width + 7 * spacing)) // 2  # center the boxes\n",
     "    y = 3 * height // 4\n",
     "\n",
-    "    character_image = pygame.transform.scale(pygame.image.load('Constant_runner.png'),(box_width//2, box_height*3//2))\n",
+    "    character_image = pygame.transform.scale(pygame.image.load('Constant_runner.png'),(box_width*9//8, 3*box_height//2))\n",
     "    character_x = start_x + 2 * (box_width + spacing)\n",
-    "    character_y = y - box_height*3//2\n",
+    "    character_y = y - 3*box_height//2\n",
     "\n",
     "    score_text_box = pygame.Rect(width-width/12, 50, width/12, width/15)\n",
     "    \n",
@@ -513,7 +505,7 @@
     "    while True:\n",
     "        math_game_dos.fill(white)\n",
     "        \n",
-    "        character = pygame.Rect(character_x, character_y, box_width//2, box_height*3//2)\n",
+    "        character = pygame.Rect(character_x, character_y, box_width*8//8, 3*box_height//2)\n",
     "\n",
     "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "        dropdown_dynamics(math_game_dos, dropdown, home_button, close_button)\n",
@@ -641,7 +633,7 @@
     "\n",
     "    dropdown_dynamics(screen, dropdown, home_button, close_button)\n",
     "\n",
-    "    subbutton_math_1, subbutton_math_2 = button_dynamics(button_math, 'Math', 'Game 1', 'Game 2')\n",
+    "    subbutton_math_1, subbutton_math_2 = button_dynamics(button_math, 'Math Games')\n",
     "    \n",
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
