--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -6,12 +6,28 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
      "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[31mSystemExit\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3557: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -426,13 +442,16 @@
     "                                current_points += 5\n",
     "                                if life_slots < 3:\n",
     "                                    life_slots += 1\n",
-    "                                    \n",
+    "                                phenominal_guess_sound.play()\n",
+    "                                \n",
     "                            elif abs(R - float(text)) < 0.1:\n",
     "                                current_points += 1\n",
+    "                                correct_guess_sound.play()\n",
     "                            else:\n",
     "                                life_slots -= 1\n",
     "                                if life_slots == 0:\n",
     "                                    game_over = True\n",
+    "                                wrong_guess_sound.play()\n",
     "                        else:\n",
     "                            text = '0.'\n",
     "                            active = False\n",
@@ -873,7 +892,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -887,7 +906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
